v1.04 add correct letter-spacing and correct variable

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,22 +4,17 @@ Variable
 :root {
   --title-primary-color: #ffffff;
   --title-secondary-color: #212121;
-  --accent-color: #2196f3;
 
   --text-primary-color: #757575;
   --text-secondary-color: #212121;
   --text-tertiary-color: #ffffff;
 
+  --accent-color: #2196f3;
+  --icon-primary-color: #afb1b8;
+
   --background-primary: #ffffff;
   --background-secondary: #2f303a;
   --background-tertiary: #f5f4fa;
-
-  --header-bottom-line: #ececec;
-  --logo-second-part-header: #000000;
-  --logo-second-part-footer: #ffffff;
-  --icon-primary-color: #afb1b8;
-  --background-hero-btn-hvr: #188ce8;
-  --contacts-footer: rgba(255, 255, 255, 0.6);
   --background-footer-social: rgba(255, 255, 255, 0.1);
 
   --animation-duration: 250ms;
@@ -31,6 +26,7 @@ Basic Elements
 =======================================================*/
 body {
   font-family: 'Roboto', sans-serif;
+  font-size: 14px;
   line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--text-primary-color);
@@ -93,6 +89,7 @@ Basic Layout
 
   font-weight: 700;
   font-size: 36px;
+  letter-spacing: 0.03em;
   color: var(--title-secondary-color);
   text-align: center;
 }
@@ -101,6 +98,7 @@ Basic Layout
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 26px;
+  letter-spacing: 0.03em;
   color: var(--accent-color);
 }
 
@@ -110,11 +108,11 @@ Basic Layout
 }
 
 .header-logo-color {
-  color: var(--logo-second-part-header);
+  color: #000000;
 }
 
 .footer-logo-color {
-  color: var(--logo-second-part-footer);
+  color: #ffffff;
 }
 
 .visually-hidden {
@@ -172,7 +170,7 @@ Basic components
 .header {
   border-bottom-width: 1px;
   border-bottom-style: solid;
-  border-bottom-color: var(--header-bottom-line);
+  border-bottom-color: #ececec;
 }
 
 .header-wrap {
@@ -210,7 +208,6 @@ Basic components
 .nav-link,
 .contacts-link {
   font-weight: 500;
-  font-size: 14px;
   letter-spacing: 0.02em;
 
   transition: color var(--animation-duration) var(--animation-timing-function);
@@ -328,7 +325,7 @@ Basic components
 
 .hero-btn:hover,
 .hero-btn:focus {
-  background-color: var(--background-hero-btn-hvr);
+  background-color: #188ce8;
 }
 
 /*=======================================================
@@ -336,8 +333,6 @@ Basic components
 =======================================================*/
 .features {
   display: flex;
-
-  font-size: 14px;
 }
 
 .features-item {
@@ -368,6 +363,8 @@ Basic components
 
   font-weight: 700;
   font-size: 14px;
+  line-height: 1.17;
+
   text-transform: uppercase;
   color: var(--title-secondary-color);
 }
@@ -403,8 +400,6 @@ Basic components
   height: 70px;
 
   font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
   text-transform: uppercase;
   color: var(--text-tertiary-color);
 
@@ -418,6 +413,7 @@ Basic components
   display: flex;
 
   font-size: 16px;
+  letter-spacing: 0.03em;
   text-align: center;
 }
 
@@ -444,6 +440,7 @@ Basic components
 
   font-weight: 500;
   font-size: 16px;
+  letter-spacing: 0.03em;
   color: var(--title-secondary-color);
 }
 
@@ -577,11 +574,6 @@ Basic components
 .portfolio-link {
   display: block;
 
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 1.87;
-  color: var(--text-primary-color);
-
   transition: box-shadow var(--animation-duration)
     var(--animation-timing-function);
 }
@@ -630,6 +622,7 @@ Basic components
 
   font-size: 18px;
   line-height: 1.56;
+  letter-spacing: 0.03em;
 
   color: var(--text-tertiary-color);
 }
@@ -650,6 +643,13 @@ Basic components
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--title-secondary-color);
+}
+
+.portfolio-text {
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.03em;
+  color: var(--text-primary-color);
 }
 
 /*=======================================================
@@ -674,7 +674,6 @@ Basic components
 
 .address-item {
   font-style: normal;
-  font-size: 14px;
   line-height: 1.71;
   color: inherit;
 }
@@ -693,7 +692,7 @@ Basic components
 }
 
 .address-contact {
-  color: var(--contacts-footer);
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .address-contact:hover,
@@ -711,8 +710,6 @@ Basic components
   margin-bottom: 20px;
 
   font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
   text-transform: uppercase;
   color: var(--text-tertiary-color);
 }
